Added flgs and flags mapper

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="currency_danish_krone">Danish Krone</string>
     <string name="currency_british_pound">British Pound</string>
     <string name="currency_hong_kong_dollar">Hong Kong Dollar</string>
-    <string name="currency_croatian_kuna">Coratian Kuna</string>
-    <string name="currency_hungarian_fornit">Hundarian Fornit</string>
+    <string name="currency_croatian_kuna">Croatian Kuna</string>
+    <string name="currency_hungarian_fornit">Hungarian Fornit</string>
     <string name="currency_indonesian_rupiah">Indonesian Rupiah</string>
     <string name="currency_isreali_new_shekel">Israeli New Shekel</string>
     <string name="currency_indian_rupee">Indian Rupee</string>
