--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="currency_south_african_rand">South African Rand</string>
     <string name="generic_error">Something went wrong.</string>
     <string name="internet_connection_error">Please make sure you\'ve got internet connection.</string>
+    <string name="reload_button">Try again</string>
 
 </resources>
